--- a/index.html
+++ b/index.html
@@ -4,16 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">J<span class="text-primary">o</span>y</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Joy Biswas</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptatum labore quibusdam nesciunt optio in soluta quas laudantium. Eveniet enim pariatur voluptatum nihil?</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/joy.png" alt="">
+        </div>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
