section style added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Joy Biswas</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptatum labore quibusdam nesciunt optio in soluta quas laudantium. Eveniet enim pariatur voluptatum nihil?</p>
+                <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptatum labore quibusdam nesciunt optio in soluta quas laudantium. Eveniet enim pariatur voluptatum nihil?</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
@@ -33,6 +33,60 @@
 
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick website. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat atque voluptatum quidem id ullam expedita eaque odit fugiat aspernatur. Et, nulla. 
+            </p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Joy Biswas</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth:</h4>
+                    <p class="info-description">24 july 2001</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Form:</h4>
+                    <p class="info-description">khulna,bangladesh</p>
+                </div>
+            </div>
+        </section>
+        <!-- what I do -->
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p id="do-section" class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae officiis et obcaecati, veritatis nulla nam accusantium ab at aliquam fugit laborum non illum quae! Quis iusto necessitatibus cupiditate laborum asperiores veniam sunt!              
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3 class="skill-title"></h3>
+                    <p class="skill-description"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3 class="skill-title"></h3>
+                    <p class="skill-description"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3 class="skill-title"></h3>
+                    <p class="skill-description"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3 class="skill-title"></h3>
+                    <p class="skill-description"></p>
+                </div>
+
+            </div>
+        </section>
+
 
     </main>
     <footer>
