--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header ">
         <nav>
             <h3 class="nav-title">J<span class="text-primary">o</span>y</h3>
             <ul>
@@ -33,7 +33,7 @@
 
     </header>
     <main>
-        <section class="about">
+        <section class="about ">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick website. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat atque voluptatum quidem id ullam expedita eaque odit fugiat aspernatur. Et, nulla. 
@@ -87,7 +87,7 @@
             </div>
         </section>
         <!-- Resume section start here -->
-        <section>
+        <section class="">
             <div class="summary-container">
                 <div class="section-title">A summary of My Resume</div>
             <div class="resume">
@@ -152,7 +152,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="">
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-description">
